# gofr-iq

./: .gitattributes  .gitignore  README.md  SERVICE_COMPATIBILITY.md  nohup.out  pyproject.toml  readme.md  secrets  test_extraction.py  test_fixes_checklist.md  test_neo4j_sync.py
.git-hooks/: pre-commit
.github/: copilot-instructions.md
app/: __init__.py  config.py  main.py  main_mcp.py  main_mcpo.py  main_web.py
config/: gofr_approles.json
demo/: demo_data.py  load_demo_data.py  readme.md
docker/: .env.example  .vault-init.env.example  Dockerfile.chromadb  Dockerfile.dev  Dockerfile.neo4j  Dockerfile.prod  Dockerfile.vault  backup.sh  build-all.sh  build-base.sh  build-chromadb.sh  build-dev.sh  build-neo4j.sh  build-prod.sh  build-vault.sh  compose.prod.yml  docker-compose-test.yml  docker-compose.test.yml  docker-compose.yml  entrypoint-chromadb.sh  entrypoint-dev.sh  entrypoint-neo4j.sh  entrypoint-prod.sh  entrypoint-vault.sh  manage-infra.sh  manage_infra.sh  reset-prod.sh  run-dev.sh  run-prod.sh  run-vault.sh  start-chromadb.sh  start-neo4j.sh  start-prod.sh  start-swarm.sh  stop-chromadb.sh  stop-neo4j.sh  stop-prod.sh  unseal-vault.sh  vault-config.hcl  vault-config.json  (+1 more)
docs/: AUTH_ARCHITECTURE.md  AUTH_BACKEND_MIGRATION_PLAN.md  AUTH_FLOW_MIGRATION.md  AUTH_SIMPLIFICATION_PLAN.md  AUTH_TEST_PLAN.md  AUTH_V2_MIGRATION_PLAN.md  DOCKER_SETUP_GUIDE.md  EXPLICIT_AUTH_TOKEN_MIGRATION.md  GOFR_PLOT_ARCHITECTURE_ANALYSIS.md  GROUP_ACCESS_CONTROL_PLAN.md  GROUP_ACCESS_TEST_PLAN.md  IMPLEMENTATION.md  IMPLEMENTATION_PLAN_GRAPH.md  IMPLEMENTATION_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  avatar-feed-gap-plan.md  avatar-test-strategy.md  client-guid-migration.md  client_profiles.md  configuration.md  design-review-report.md  design-review.txt  development.md  fund-mandate-text-implementation-plan.md  fund-mandate-text-spec.md  getting-started.md  gofr-dig-auth-upgrade-answers.md  gofr_iq_auth_upgrade_implementation_plan.md  gofr_iq_auth_upgrade_spec.md  graph-bootstrap-spec.md  graph_architecture.md  how_news_routing_works.md  ingest_llm_analysis.md  mcp-tool-interface.md  mcp_concurrency_10_workers.md  neo4j-schema.md  phase4_calibration_scenarios_implementation_plan.md  phase4_calibration_scenarios_proposal.md  (+17 more)
logs/: gofr-iq_mcpo_config.json  gofriq_tokens.json  groups.json
scripts/: README_GROUP_MANAGEMENT.md  backfill_client_mandates.py  bootstrap.py  bootstrap.sh  bootstrap_auth.py  bootstrap_gofr_iq.sh  bootstrap_graph.py  check_version_compatibility.py  create_group.py  create_group.sh  dump_environment.sh  ensure_approle.sh  export_vault_for_swarm.sh  full_reset_and_run.sh  generate_envs.sh  gofriq.env  gofriq.env.example  load_aliases.py  manage_client.py  manage_client.sh  manage_document.sh  manage_servers.sh  manage_source.sh  migrate_secrets_to_volume.sh  project.env.example  purge_local_data.sh  readme.md  reset-sim-env.sh  restart_servers.sh  run-dev-container.sh  run-dev.sh  run_golden_baseline.sh  run_mcp.sh  run_mcpo.sh  run_tests.sh  run_tests_refactor_plan.md  run_web.sh  setup_approle.py  start-prod.sh  test_env.sh  (+3 more)
simulation/: .env.synthetic  .env.synthetic.example  INGESTION_WORKFLOW.md  README.md  SIMULATION_AUTOMATION_PROPOSAL.md  SIMULATION_ENHANCEMENT_PROPOSAL.md  SYNTHETIC_DATA_PROPOSAL.md  check_cache.py  check_documents.py  client_profiler.py  demo_ips_filtering.py  generate_client_ips.py  generate_for_n8n.py  generate_for_n8n.sh  generate_synthetic_clients.py  generate_synthetic_stories.py  ingest_synthetic_stories.py  load_clients_to_neo4j.py  load_simulation_data.py  load_universe_to_neo4j.py  measure_bias_sensitivity.py  query_client_feed.py  readme.md  reset_simulation_env.py  (+11 more)
(+2403 files in other folders)
