[project]
name = "gofr-iq"
version = "0.1.0"
description = "GOFR IQ MCP Server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
# Note: gofr-common is installed as editable from lib/gofr-common submodule by entrypoint
# Core deps (mcp, pydantic, fastapi, uvicorn, starlette, sse-starlette, PyJWT, httpx, mcpo) come from gofr-common
dependencies = [
    # Project-specific dependencies only
    # All versions pinned per SERVICE_COMPATIBILITY.md
    "neo4j==6.0.3",
    # Pin chromadb to exact version matching Docker server (docker/Dockerfile.chromadb)
    # Using 0.5.23 (stable) - 1.0.x has Rust binding issues
    "chromadb==0.5.23",
    "lingua-language-detector==2.1.1",
    "hvac==2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "black==25.11.0",
    "ruff==0.14.8",
    "pyright==1.1.407",
    "pytest-cov==7.0.0",
    "bandit==1.9.2",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/__pycache__/*",
    "*/test/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
skip_empty = true
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.bandit]
exclude_dirs = ["test"]
skips = ["B101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
filterwarnings = [
    "error",
    # Ignore ChromaDB's internal Pydantic deprecation warnings
    # ChromaDB 0.5.23 uses deprecated Pydantic v2 patterns - not our code
    # This will be fixed when ChromaDB updates to Pydantic v2.11+ compatible code
    "ignore:Accessing the 'model_fields' attribute on the instance is deprecated:pydantic.warnings.PydanticDeprecatedSince211",
    # Ignore SSL socket cleanup warnings from httpx/OpenRouter API client
    # These are cosmetic resource warnings from async HTTP connections, not real failures
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::ResourceWarning",
]
